--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -20,14 +20,15 @@
   additional_dependencies: []
   minimum_pre_commit_version: "2.9.2"
 
-# Legacy alias
-- id: ruff
-  name: ruff (legacy alias)
-  description: "Run 'ruff check' for extremely fast Python linting"
-  entry: ruff check --force-exclude
+- id: ty-check
+  name: ty check
+  description: "Run 'ty check' to perform Python static type checking"
+  entry: ty check
   language: python
   types_or: [python, pyi, jupyter]
   args: []
   require_serial: true
   additional_dependencies: []
   minimum_pre_commit_version: "2.9.2"
+
+
